# kalman-attitude-estimator

./: CMakeLists.txt  attitude_estimator_ekf.py  code_gen.sh  runtests.sh
attitude_estimation/: ekf_gyro_acc.cpp  ekf_gyro_acc.h  ekf_gyro_acc_mag.cpp  ekf_gyro_acc_test.cpp  run_estimator_on_zmq.cpp
attitude_estimation/code_gen/: c_code_gen.py  ekf_common.py  ekf_gyro_acc.h  ekf_gyro_acc.ipynb  ekf_gyro_acc.py  ekf_gyro_acc_mag.ipynb  ekf_gyro_acc_mag.py  ekf_gyro_acc_mag_error_quat.ipynb  ekf_gyro_mag.h
src/: ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h  ExtendedKalmanFilterTest.cpp  template_kalman.h  template_kalman_test.cpp
src/attitude_estimation/: ekf_gyro_acc_mag_error_quat.cpp  mekf_gyro_acc_mag.cpp  mekf_gyro_acc_mag.h
src/attitude_estimation/code_gen/: ekf_gyro_acc_mag_error_quat.py
test/: state_estimator.cpp  state_estimator.h  state_estimator_test.cpp  test.cpp
